--- a/composer.json
+++ b/composer.json
@@ -24,5 +24,5 @@
         "laravel/framework": "^8.75"
     },
     "license": "MIT",
-    "minimum-stability": "dev"
+    "minimum-stability": "stable"
 }
