--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,7 @@
     ],
     "require": {
         "php": "^7.0.0|^8.0.0",
-        "guzzlehttp/guzzle": "^7.0.1",
-        "laravel/framework": "^10.10"
+        "guzzlehttp/guzzle": "^7.0.1"
     },
     "license": "MIT",
     "minimum-stability": "stable"
